(Settings): Adding Environment Variables and Adding ReactiveSearch Dependency

--- a/.env-example
+++ b/.env-example
@@ -1,2 +1,5 @@
 PORT=3001
 NODE_ENV=development
+CLUSTER_URL='https://...'
+CREDENTIALS='XxXxXxX:XxXxXxXXxXxXxX'
+APPS=users,sources,boards,reconciliations
