--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   },
   "homepage": "https://github.com/WilliamVelazquez/advanced-search#readme",
   "dependencies": {
+    "@appbaseio/reactivesearch": "3.11.8",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "styled-components": "5.1.1"
@@ -53,17 +54,16 @@
     "eslint-plugin-react": "7.20.3",
     "file-loader": "6.0.0",
     "html-webpack-plugin": "4.3.0",
-    "json-loader": "0.5.7",
     "mini-css-extract-plugin": "0.9.0",
     "optimize-css-assets-webpack-plugin": "5.0.3",
     "react-hot-loader": "4.12.21",
+    "serialize-javascript": ">=2.1.1",
     "style-loader": "1.2.1",
     "svg-url-loader": "6.0.0",
     "uglifyjs-webpack-plugin": "2.2.0",
     "url-loader": "4.1.0",
     "webpack": "4.44.0",
     "webpack-cli": "3.3.12",
-    "webpack-dev-server": "3.11.0",
-    "serialize-javascript": ">=2.1.1"
+    "webpack-dev-server": "3.11.0"
   }
 }
