--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Search box to filter multiple data sets by type and content, developed with ReactJs and Elastic Search.",
   "main": "index.js",
   "scripts": {
+    "test": "jest",
     "dev": "webpack-dev-server --open --config ./webpack.dev.config.js",
     "prod": "webpack -p --env.NODE_ENV=production --env.production --progress",
     "deploy:new": "npm run prod && git add dist/ && git commit -m \"Deploy to gh-pages\" && git subtree push --prefix dist origin gh-pages",
@@ -57,6 +58,7 @@
     "eslint-plugin-react": "7.20.3",
     "file-loader": "6.0.0",
     "html-webpack-plugin": "4.3.0",
+    "jest": "26.1.0",
     "mini-css-extract-plugin": "0.9.0",
     "optimize-css-assets-webpack-plugin": "5.0.3",
     "react-hot-loader": "4.12.21",
