--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,8 @@ logs
 node_modules
 bower_components
 
+# testing
+coverage
 test/cypress/videos/
 test/cypress/screenshots/
 test/cypress/integration/examples
