--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage",
     "dev": "webpack-dev-server --open --config ./webpack.dev.config.js",
     "prod": "webpack -p --env.NODE_ENV=production --env.production --progress",
     "deploy:new": "npm run prod && git add dist/ && git commit -m \"Deploy to gh-pages\" && git subtree push --prefix dist origin gh-pages",
@@ -50,6 +52,8 @@
     "clean-webpack-plugin": "3.0.0",
     "css-loader": "3.6.0",
     "dotenv": "8.2.0",
+    "enzyme": "3.11.0",
+    "enzyme-adapter-react-16": "1.15.2",
     "eslint": "7.5.0",
     "eslint-config-airbnb": "18.2.0",
     "eslint-loader": "4.0.2",
@@ -59,9 +63,11 @@
     "file-loader": "6.0.0",
     "html-webpack-plugin": "4.3.0",
     "jest": "26.1.0",
+    "jest-styled-components": "7.0.2",
     "mini-css-extract-plugin": "0.9.0",
     "optimize-css-assets-webpack-plugin": "5.0.3",
     "react-hot-loader": "4.12.21",
+    "react-test-renderer": "16.13.1",
     "serialize-javascript": ">=2.1.1",
     "style-loader": "1.2.1",
     "svg-url-loader": "6.0.0",
@@ -70,5 +76,13 @@
     "webpack": "4.44.0",
     "webpack-cli": "3.3.12",
     "webpack-dev-server": "3.11.0"
+  },
+  "jest": {
+    "setupFilesAfterEnv": [
+      "<rootDir>/src/__test__/setupTest.js"
+    ],
+    "moduleNameMapper": {
+      "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "<rootDir>/src/__mocks__/fileMock.js"
+    }
   }
 }
